fix modal overflow when adding many items

--- a/src/components/modal/style.css
+++ b/src/components/modal/style.css
@@ -31,7 +31,7 @@
     display: block;
     width: 100%;
     max-width: 960px;
-    height: 603px; 
+    min-height: 603px; 
     box-sizing: border-box;
     background-color: #fff;
     border-radius: 10px;
